@@ -8,6 +8,10 @@
   * Added the session splitting script to IOC to address Ticket #24
   * Changed lsl.common.mcs.mjdmpm2datetime() to return naive datetime instances (Ticket #26)
   * Fixed a bug in lsl.common.sdf.Project that causes some observation non-overlaps to be reported as overlaps
+  * Fixed a bug in the setup.py script that caused it to crash on systems without pkg-config installed
+  * Modified splitDRX.py to cope with DRX data that begins with frames that list a decimation of zero
+  * Added support for parsing the OBS_DRX_GAIN and OBS_TBN_GAIN keywords in the SDF parser
+  * Cleaned up drxSpectra.py to better deal with files that have a tuning missing at the beginning or where the sample rate changes at the beginning of the file
 
 0.5.2
   * Fixed a bug in gatherDebugging.py that caused the script to crash on missing modules
